# fitness-ai

./: .env.example  .gitignore  CLAUDE.md  DECISIONS_NEEDED.md  README.md  SESSION_LOG.md  TASKS.md  TASKS_PHASE5.md  pyproject.toml  setup.sh
docs/: healthkit-export-notes.md
docs/adr/: 0001-source-row-provenance.md  0002-food-entry-vs-rollup.md  0003-runtime-and-tooling.md  0004-workout-dedup.md  0005-adaptive-tdee.md  0006-timezone-offset-vs-iana.md  0007-calorie-burned-precedence.md  0008-healthkit-source-app.md
docs/sessions/: 2026-07-18-to-19.md
schema/: canonical_schema_v0.1.sql
schema/migrations/: 0001_base_canonical.sql  0002_food.sql  0003_weight.sql  0004_utc_offset.sql  0005_source_app.sql
src/coach/: config.py  paths.py  timeutil.py
src/coach/adapters/healthkit/: __init__.py  ingest.py  parser.py
src/coach/adapters/whoop/: __init__.py  auth.py  client.py  flow.py  ingest.py  sport_map.py
src/coach/cli/: main.py
src/coach/coach/: __init__.py  agent.py  grounding.py  llm.py  tools.py
src/coach/compute/: daily.py  guardrails.py  tdee.py  trends.py
src/coach/normalize/: dedup.py  healthkit.py  runner.py  whoop.py
src/coach/store/: canonical.py  db.py  maintenance.py  raw.py
tests/: conftest.py  test_coach_agent.py  test_coach_tools.py  test_config.py  test_daily.py  test_db.py  test_dedup_resolver.py  test_grounding.py  test_guardrails.py  test_healthkit_normalize.py  test_healthkit_parser.py  test_healthkit_weight.py  test_ingest_normalize.py  test_maintenance.py  test_schema_views.py  test_tdee.py  test_timeutil.py  test_trends.py  test_whoop_auth.py  test_whoop_client.py  test_whoop_normalize.py
tests/fixtures/healthkit/: export_sample.xml
tests/fixtures/whoop/: README.md  body_measurement.json  cycle_page1.json  recovery_page1.json  recovery_page2.json  sleep_page1.synthetic.json  workout_page1.json  workout_timezone_jump.json
