[project]
name = "coach"
version = "0.1.0"
description = "Unified AI Health & Fitness Coach — grounded, single-user, n=1"
readme = "README.md"
# NOTE: CLAUDE.md §3 specifies Python 3.11+. Only 3.10 was available on the
# build machine; code is kept 3.10-compatible. See docs/adr/0003-runtime-and-tooling.md.
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[project.scripts]
coach = "coach.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Migrations live in schema/migrations/ at the repo root and are located at
# runtime relative to the package (see coach.store.paths). This is a local,
# editable-install, single-user tool — no need to vendor SQL into the wheel.

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter; long SQL/URLs tolerated

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
